ipc/ipdl/test/ipdl/ok/multipleUsingCxxTypes.ipdl
using struct mozilla::void_t from "ipc/IPCMessageUtils.h";
using struct mozilla::void_t from "ipc/IPCMessageUtils.h";

protocol multipleUsingCxxTypes {
child:
    async Msg(void_t foo);
};
